--- a/_config.yml
+++ b/_config.yml
@@ -117,8 +117,8 @@ author:
       icon: "fas fa-fw fa-envelope-square"
       # url: mailto:your.name@email.com
     - label: "Linkedin"
-      icon: "fab fa-fw fa-linkedin-square"
-      url: "https://twitter.com/descriptdata"
+      icon: "fab fa-fw fa-linkedin"
+      url: "www.linkedin.com/in/tyson-van-patten-5182b471"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/tvanpat"
