--- a/_config.yml
+++ b/_config.yml
@@ -118,7 +118,7 @@ author:
       # url: mailto:your.name@email.com
     - label: "Linkedin"
       icon: "fab fa-fw fa-linkedin"
-      url: "www.linkedin.com/in/tyson-van-patten-5182b471"
+      url: "https://linkedin.com/in/tyson-van-patten-5182b471"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/tvanpat"
