--- a/_config.yml
+++ b/_config.yml
@@ -108,7 +108,7 @@ analytics:
 # Site Author
 author:
   name             : "Tyson Van Patten"
-  avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
+  avatar           : "/images/profile_pic.jpg"
   bio              : "Data Science Portfolio"
   location         : "Washington, D.C."
   email            :
