--- a/_config.yml
+++ b/_config.yml
@@ -109,7 +109,7 @@ analytics:
 author:
   name             : "Tyson Van Patten"
   avatar           : "/images/profile_pic.jpg"
-  bio              : "Data Science Portfolio"
+  bio              : "Senior Data Science Technician for the U.S. Army"
   location         : "Washington, D.C."
   email            :
   links:
