added portfolio section

--- a/_config.yml
+++ b/_config.yml
@@ -276,6 +276,11 @@ compress_html:
   ignore:
     envs: development
 
+# Collection info
+collections:
+  portfolio:
+    output: true
+    permalink: /:collection/:path/
 
 # Defaults
 defaults:
@@ -298,3 +303,12 @@ defaults:
     values:
       layout: single
       author_profile: true
+
+    # _portfolio
+  - scope:
+      path: ""
+      type: portfolio
+    values:
+      layout: single
+      author_profile: false
+      share: true
