--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,6 +6,8 @@ main:
     url: /about/
   - title: "Blog Posts"
     url: /blog-posts/
+ - title: "Portfolio"
+   url: /portfolio/
   # - title: "About"
   #   url: https://mmistakes.github.io/minimal-mistakes/about/
   # - title: "Sample Posts"
