--- a/_config.yml
+++ b/_config.yml
@@ -120,7 +120,7 @@ author:
       icon: "fab fa-fw fa-linkedin"
       url: "https://linkedin.com/in/tyson-van-patten-5182b471"
     - label: "GitHub"
-      icon: "fab fa-fw fa-gitlab"
+      icon: "fab fa-fw fa-github"
       url: "https://github.com/tvanpat"
     - label: "GitLab"
       icon: "fab fa-fw fa-gitlab"
