Updated location information

--- a/_config.yml
+++ b/_config.yml
@@ -110,7 +110,7 @@ author:
   name             : "Tyson Van Patten"
   avatar           : "/images/profile_pic.jpg"
   bio              : "Senior Data Science Technician"
-  location         : "Washington, D.C."
+  location         : "Washington, D.C./ Colorado Springs, CO"
   email            :
   links:
     - label: "Email"
