--- a/_config.yml
+++ b/_config.yml
@@ -125,6 +125,9 @@ author:
     - label: "GitLab"
       icon: "fab fa-fw fa-gitlab"
       url: "https://gitlab.com/vp7799"
+    - label: "Docker Hub"
+      icon: "fab fa-fw fa-docker"
+      url: "https://hub.docker.com/u/vp7799"
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
       url: "https://twitter.com/descriptdata"
